# frostbike-esp

./: CMakeLists.txt  Makefile  README.md
components/display/: CMakeLists.txt
components/display/include/: display.h
components/display/src/: display.c  epdif.cpp
components/spi/: CMakeLists.txt
components/spi/include/: spi.hpp
components/spi/src/: spi.cpp
main/: main.c
src/: main.c  sdkconfig.h
